--- a/newscurator/src/Styles/Layout.css
+++ b/newscurator/src/Styles/Layout.css
@@ -26,12 +26,18 @@
     display: flex;
     flex-direction: row;
     flex: auto;
-    max-width:302px;
+    gap: 1000px;
+    max-width:100vw;
     overflow-x:hidden ;
   }
   .finlogix-containers{
-    height:500px;
-    width:50%;
+    margin: 2rem 0 2rem 0;
+    padding: 0 4rem 0 4rem;
+    height: 35vh;
+    width: 100vw;
+  }
+  .finlogix-containers iframe:first-child {
+    display: none;
   }
   /* Media query for smaller screens */
   @media (max-width: 768px) {
